--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,19 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">PointBox</a>
+        <a class="navbar-brand" href="/dashboard">PointBox</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
+            <% if current_user.admin?%>
+            <li><%= link_to "Admin", admin_path %></li>
+            <% end %>
           <li><%= link_to "Your Dashboard", dashboard_path %></li>
+          <li><%= link_to "Rewards", rewards_path %></li>
+
           <p class="navbar-text">Signed in as <%= current_user.name.capitalize %></p>
           <li><%= link_to "Log Out", logout_path, method: :delete %></li>
           <% else %>
