--- a/app/views/rewards/new.html.erb
+++ b/app/views/rewards/new.html.erb
@@ -1,9 +1,3 @@
 <h1>Create a New Reward</h1>
 
-<%= form_for(:reward, url: rewards_path, method: :post) do |f| %>
-<p><%= f.label 'Description: ' %>
-<%= f.text_field :name %></p>
-<p><%= f.label 'Point Value: ' %>
-<%= f.text_field :point_value %></p>
-<%= f.submit "Create This Reward" %>
-<% end %>
+<%= render 'form' %>
